convert hero to img tag to prevent undesired cropping

--- a/assets/sass/components/_intro.scss
+++ b/assets/sass/components/_intro.scss
@@ -3,7 +3,7 @@
 	
 	.hero {
 		background-color: white;
-		height: 2500px;
+		//height: 2500px;
 		background-size: cover;
 		background-repeat: no-repeat;
 		background-position: center right;
